--- a/src/AltaSoft.DomainPrimitives.Generator/AltaSoft.DomainPrimitives.Generator.csproj
+++ b/src/AltaSoft.DomainPrimitives.Generator/AltaSoft.DomainPrimitives.Generator.csproj
@@ -14,11 +14,12 @@
 		<Description>Domain Primitives source generator for C#.</Description>
 		<Company>ALTA Software llc.</Company>
 		<Copyright>Copyright © 2024 ALTA Software llc.</Copyright>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 	</PropertyGroup>
 
 	<PropertyGroup>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<ProjectUrl>https://github.com/altasoft/DomainPrimitives</ProjectUrl>
 		<RepositoryUrl>https://github.com/altasoft/DomainPrimitives</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
