--- a/.github/workflows/publish_nuget.yml
+++ b/.github/workflows/publish_nuget.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --no-restore -c Release --no-dependencies --projects $(find . -name '*.csproj' ! -name 'AltaSoft.DomainPrimitives.Generator.Tests.csproj')
+      run: dotnet build --no-restore -c Release
 
 #    - name: Test
 #      run: dotnet test --no-build
