--- a/tests/AltaSoft.DomainPrimitives.XmlDataTypes.Tests/AltaSoft.DomainPrimitives.XmlDataTypes.Tests.csproj
+++ b/tests/AltaSoft.DomainPrimitives.XmlDataTypes.Tests/AltaSoft.DomainPrimitives.XmlDataTypes.Tests.csproj
@@ -7,6 +7,8 @@
 
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
+
+		<NoWarn>1591</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
