--- a/Examples/DomainPrimitivesDemo/DomainPrimitivesDemo.csproj
+++ b/Examples/DomainPrimitivesDemo/DomainPrimitivesDemo.csproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1591</NoWarn>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
 
