Refactor domain primitives and update validation methods
This commit includes a major refactoring of domain primitives and updates to validation methods.

- The `Validate` method now returns a `PrimitiveValidationResult` instead of throwing an `InvalidDomainValueException`.
- New `TryCreate` methods have been added to all domain primitive classes, which attempt to create an instance and return a boolean indicating success or failure.
- The `InvalidDomainValueException` now includes a reference to the instance that caused the exception.
- A new type `PrimitiveValidationResult` has been introduced, which includes `IsValid` and `ErrorMessage` properties.
- NuGet packages in all projects have been updated to the latest versions.
- Tests have been modified to support the new signatures.

--- a/src/AltaSoft.DomainPrimitives.XmlDataTypes/AltaSoft.DomainPrimitives.XmlDataTypes.csproj
+++ b/src/AltaSoft.DomainPrimitives.XmlDataTypes/AltaSoft.DomainPrimitives.XmlDataTypes.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-16"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net7.0;net8.0</TargetFrameworks>
@@ -16,6 +16,13 @@
 		<DomainPrimitiveGenerator_GenerateJsonConverters>true</DomainPrimitiveGenerator_GenerateJsonConverters>
 		<DomainPrimitiveGenerator_GenerateXmlSerialization>true</DomainPrimitiveGenerator_GenerateXmlSerialization>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<CompilerVisibleProperty Include="DomainPrimitiveGenerator_GenerateJsonConverters" />
+		<CompilerVisibleProperty Include="DomainPrimitiveGenerator_GenerateTypeConverters" />
+		<CompilerVisibleProperty Include="DomainPrimitiveGenerator_GenerateSwaggerConverters" />
+		<CompilerVisibleProperty Include="DomainPrimitiveGenerator_GenerateXmlSerialization" />
+	</ItemGroup>
 
 
 	<ItemGroup>
