--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,12 @@
 <Project>
   <PropertyGroup>
+	<DefaultTargetFrameworks>net8.0;net9.0;net10.0</DefaultTargetFrameworks>
+	<AppDefaultTargetFramework>net10.0</AppDefaultTargetFramework>
 	<OutputType>Library</OutputType>
 	<Nullable>enable</Nullable>
 	<LangVersion>Latest</LangVersion>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<AnalysisLevel>latest</AnalysisLevel>
 
 	<Authors>ALTA Software llc.</Authors>
 	<Product>Domain Primitives</Product>
@@ -11,6 +14,7 @@
 	<Copyright>Copyright © 2024 ALTA Software llc.</Copyright>
 	<Version>6.0.3</Version>
   </PropertyGroup>
+
 
   <PropertyGroup>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
