--- a/src/AltaSoft.DomainPrimitives.XmlDataTypes/AltaSoft.DomainPrimitives.XmlDataTypes.csproj
+++ b/src/AltaSoft.DomainPrimitives.XmlDataTypes/AltaSoft.DomainPrimitives.XmlDataTypes.csproj
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
+		<TargetFrameworks>$(DefaultTargetFrameworks)</TargetFrameworks>
 		<AssemblyTitle>Domain Primitives XML Data Types</AssemblyTitle>
 		<Description>Domain Primitives library for C# (XML Data Types).</Description>
 	</PropertyGroup>
-
 
 	<PropertyGroup>
 		<Title>Domain Primitives XML Data Types</Title>
@@ -25,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="10.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" />
 	</ItemGroup>
 
 
