--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,6 @@
 <Project>
   <PropertyGroup>
 	<DefaultTargetFrameworks>net8.0;net9.0;net10.0</DefaultTargetFrameworks>
-	<AppDefaultTargetFramework>net10.0</AppDefaultTargetFramework>
 	<OutputType>Library</OutputType>
 	<Nullable>enable</Nullable>
 	<LangVersion>Latest</LangVersion>
@@ -32,6 +31,15 @@
 
 	<PackageTags>ddd;domain;entity;dotnet-core;value-object;strongly-typed;</PackageTags>
   </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(TF_BUILD)' == 'True' ">
+	<DebugType>embedded</DebugType>
+	<EmbedUntrackedSources>true</EmbedUntrackedSources>
+	<EmbedAllSources>false</EmbedAllSources>
+	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+	<Deterministic>true</Deterministic>
+  </PropertyGroup>
+
 
   <ItemGroup>
 	<None Include="..\..\README.md" Pack="true" PackagePath="\" />
