Moved OpenAPI schema transformers to a new project.
Added AltaSoft.DomainPrimitives.OpenApiExtensions and updated demo and solution files to use it. Removed related logic from SwaggerExtensions.

--- a/Examples/AltaSoft.DomainPrimitives.Demo/AltaSoft.DomainPrimitives.Demo.csproj
+++ b/Examples/AltaSoft.DomainPrimitives.Demo/AltaSoft.DomainPrimitives.Demo.csproj
@@ -19,6 +19,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\AltaSoft.DomainPrimitives.OpenApiExtensions\AltaSoft.DomainPrimitives.OpenApiExtensions.csproj" />
     <ProjectReference Include="..\..\src\AltaSoft.DomainPrimitives.SwaggerExtensions\AltaSoft.DomainPrimitives.SwaggerExtensions.csproj" />
     <ProjectReference Include="..\DomainPrimitivesDemo\DomainPrimitivesDemo.csproj" />
   </ItemGroup>
