Updated CI build condition to target GitHub Actions.
Applied embedded source and deterministic build settings only when running in GitHub Actions.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -32,14 +32,13 @@
 	<PackageTags>ddd;domain;entity;dotnet-core;value-object;strongly-typed;</PackageTags>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(TF_BUILD)' == 'True' ">
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
 	<DebugType>embedded</DebugType>
 	<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	<EmbedAllSources>false</EmbedAllSources>
 	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
 	<Deterministic>true</Deterministic>
   </PropertyGroup>
-
 
   <ItemGroup>
 	<None Include="..\..\README.md" Pack="true" PackagePath="\" />
