--- a/src/AltaSoft.DomainPrimitives.XmlDataTypes/AltaSoft.DomainPrimitives.XmlDataTypes.csproj
+++ b/src/AltaSoft.DomainPrimitives.XmlDataTypes/AltaSoft.DomainPrimitives.XmlDataTypes.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
 	<TargetFrameworks>$(DefaultTargetFrameworks)</TargetFrameworks>
 	<AssemblyTitle>Domain Primitives XML Data Types</AssemblyTitle>
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" />
+	  <PackageReference Include="Microsoft.OpenApi" />
   </ItemGroup>
 
 
