Added support for custom serialization formats for date/time. DateTimeOffset, TimeSpan.
Generated code now respects [SerializationFormat] for JSON, XML, and type converters.

Updated tests and runtime helpers to cover all supported types.

Updated package versions and improved string escaping in generated code.

--- a/tests/AltaSoft.DomainPrimitives.UnitTests/AltaSoft.DomainPrimitives.UnitTests.csproj
+++ b/tests/AltaSoft.DomainPrimitives.UnitTests/AltaSoft.DomainPrimitives.UnitTests.csproj
@@ -25,6 +25,18 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<PropertyGroup>
+		<DomainPrimitiveGenerator_GenerateJsonConverters>true</DomainPrimitiveGenerator_GenerateJsonConverters>
+		<DomainPrimitiveGenerator_GenerateXmlSerialization>true</DomainPrimitiveGenerator_GenerateXmlSerialization>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<CompilerVisibleProperty Include="DomainPrimitiveGenerator_GenerateJsonConverters" />
+		<CompilerVisibleProperty Include="DomainPrimitiveGenerator_GenerateTypeConverters" />
+		<CompilerVisibleProperty Include="DomainPrimitiveGenerator_GenerateOpenApiHelper" />
+		<CompilerVisibleProperty Include="DomainPrimitiveGenerator_GenerateXmlSerialization" />
+	</ItemGroup>
+
 
   <ItemGroup>
 		<ProjectReference Include="..\..\src\AltaSoft.DomainPrimitives.SwaggerExtensions\AltaSoft.DomainPrimitives.SwaggerExtensions.csproj" />
