--- a/Examples/DomainPrimitivesDemo/DomainPrimitivesDemo.csproj
+++ b/Examples/DomainPrimitivesDemo/DomainPrimitivesDemo.csproj
@@ -9,12 +9,9 @@
   </PropertyGroup>
 
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-		<PackageReference Include="Microsoft.OpenApi" Version="1.6.28" />
-	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
-		<PackageReference Include="Microsoft.OpenApi" Version="2.4.2" />
+	<ItemGroup>
+		<PackageReference Include="Microsoft.OpenApi" Version="2.6.1" />
 	</ItemGroup>
 
 
